<?xml version="1.0" encoding="utf-8"?>
<com.daimajia.swipe.SwipeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cart_row_swipe_layout"
    android:layout_width="match_parent"
    android:layout_height="120dp">

    <FrameLayout
        android:id="@+id/cart_row_swipe_left"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_margin="0dp"
        android:background="@color/red_icon">

        <ImageView
            android:id="@+id/cart_row_remove_all"
            android:layout_width="60dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:background="?android:attr/selectableItemBackground"
            android:contentDescription="@string/add_all_to_pantry"
            android:padding="10dp"
            app:srcCompat="@drawable/ic_delete_cart" />
    </FrameLayout>

    <FrameLayout
        android:id="@+id/cart_row_item"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?android:attr/selectableItemBackground">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/divider">

            <ImageView
                android:id="@+id/cart_row_item_image"
                android:layout_width="120dp"
                android:layout_height="0dp"
                android:contentDescription="@string/item_image"
                android:src="@drawable/default_item"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/cart_row_item_name"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/cart_row_item_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="6dp"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@string/name"
                android:textColor="?android:textColorPrimary"
                android:textSize="16sp"
                app:layout_constraintEnd_toStartOf="@+id/cart_row_item_remove"
                app:layout_constraintStart_toEndOf="@+id/cart_row_item_image"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/cart_row_item_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="24dp"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@string/cart_row_item_price"
                android:textColor="@color/blue_ist"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/cart_row_item_quantity"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="6dp"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@string/cart_row_item_quantity"
                android:textColor="?android:textColorPrimary"
                android:textSize="16sp"
                app:layout_constraintEnd_toStartOf="@+id/cart_row_item_remove"
                app:layout_constraintLeft_toRightOf="@+id/cart_row_item_image"
                app:layout_constraintStart_toStartOf="@+id/cart_row_item_name"
                app:layout_constraintTop_toBottomOf="@+id/cart_row_item_name" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/cart_row_item_remove"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:clickable="true"
                android:contentDescription="@string/cart_row_item_remove"
                android:focusable="true"
                android:scaleType="center"
                app:backgroundTint="@color/blue_ist"
                app:fabSize="mini"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/cart_row_item_price"
                app:srcCompat="@drawable/ic_delete_cart"
                app:tint="@color/white" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </FrameLayout>
</com.daimajia.swipe.SwipeLayout>
